--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
 		"gulp": "^4.0.2",
 		"gulp-concat": "^2.6.1",
 		"gulp-postcss": "^8.0.0",
+		"gulp-rename": "^2.0.0",
 		"gulp-replace": "^1.0.0",
 		"gulp-sass": "^4.0.2",
 		"gulp-sourcemaps": "^2.6.5",
 		"gulp-uglify": "^3.0.2",
+		"gulp-uglify-es": "^2.0.0",
 		"node-sass": "^4.13.1"
 	}
 }
